--- a/alex_blog_1/app/views/posts/index.html.erb
+++ b/alex_blog_1/app/views/posts/index.html.erb
@@ -1,1 +1,9 @@
-<h1> Index Page </h1>
+<h1> Posts Index Page </h1>
+
+<% @posts.each do |post| %>
+<div class="post_wrapper">
+	<h2 class="title"><%= link_to post.title, post %>
+	<p class="date"><%= post.created_at.strftime("%B, %d, %Y") %>
+</div>
+
+<% end %>
