--- a/alex_blog_1/app/views/layouts/application.html.erb
+++ b/alex_blog_1/app/views/layouts/application.html.erb
@@ -7,7 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<nav>
+	<ul id="navigation">
+		<li> <%= link_to "Home", root_path %></li>
+		<li> <%= link_to "New Post", new_post_path %></li>
+	</ul>
+</nav>
 <%= yield %>
 
 </body>
