--- a/alex_blog_1/app/views/posts/index.html.erb
+++ b/alex_blog_1/app/views/posts/index.html.erb
@@ -1,9 +1,12 @@
 <h1> Posts Index Page </h1>
+<div class="container">
 
-<% @posts.each do |post| %>
-<div class="post_wrapper">
-	<h2 class="title"><%= link_to post.title, post %>
-	<p class="date"><%= post.created_at.strftime("%B, %d, %Y") %>
+	<% @posts.each do |post| %>
+	<div class="post_wrapper">
+		<h2 class="title"><%= link_to post.title, post %></h2>
+		<p class="date"><%= post.created_at.strftime("%B, %d, %Y") %></p>
+	</div>
+
+	<% end %>
+
 </div>
-
-<% end %>
