--- a/alex_blog_1/app/views/posts/new.html.erb
+++ b/alex_blog_1/app/views/posts/new.html.erb
@@ -1,22 +1,5 @@
 <h1>New Post</h1>
 <div class="container">
+<%= render 'form' %>
 
-<% if @post.errors.any? %>
-	<div id="errors">
-		<h2><%= pluralize(@post.errors.count, "error") %>, thus the post wasn't saved</h2>
-		<ul>
-			<% @post.errors.full_messages.each do |error| %>
-				<li><%= error %></li>
-			<% end %>
-		</ul>
-	</div>
-<% end %>
-
-<%= form_for :post, url: posts_path do |f| %>
-	<%= f.label :title %><br>
-	<%= f.text_field :title %><br>
-	<%= f.label :content %><br>
-	<%= f.text_area :content%><br>
-	<%= f.submit %>
-<% end %>
 </div>
